--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801004.md#1">习议“领导更替” 美媒：北京陷接班人怪圈</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808504.md#1">方能达：互相学习，取长补短</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808445.md#1">中共从崛起到收敛：美中经贸谈判说明了什么?</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808403.md#1">颜丹：大陆赴台自由行游客“归零”谁之过？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808421.md#1">袁斌：在中国“撒欢儿”的岂止是红三代露小宝</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805446.md#1">陈思敏：民政部“中福在线”的丑闻与骗局</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805438.md#1">袁斌：红三代露小宝与贫困女吴花燕的迥异人生</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1">程晓容：红三代车入故宫 大陆社会畸形无底线</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804320.md#1">项云：中共流氓化政治和经济外强中干濒临灭亡</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -31,6 +31,8 @@
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808274.md#1">中共大使向德企集资无果 形象工程告吹</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808546.md#1">GDP“保6”不易 学者：大陆经济面临6大难题</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808648.md#1">首位在华外国人染肺炎 印度籍教师深圳住院</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808595.md#1">武汉肺炎急速扩大 民众疑政府此前瞒报疫情</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808602.md#1">中国百年名校纷纷沦陷 校章被迫加“党领导”</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808530.md#1">杨宁：新冠状病毒在扩散 中南海能躲过？</a><br>
@@ -40,11 +42,11 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808082.md#1">肺炎告急 武汉实施出境管控 习李督战</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808320.md#1">乐视网去年预亏112亿? 28万股东堪忧</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808379.md#1">北京朝阳医院砍医事件 20名记者被扣</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808169.md#1">广东肺炎病例新增13例 珠海3例为一家三口</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808161.md#1">武汉肺炎 平安证券高管父亲12小时变危重</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807920.md#1">新疆库尔勒原空军军官王福军夫妻的遭遇</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">【持续更新】武汉肺炎速扩9省市  已死4人</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808169.md#1">广东肺炎病例新增13例 珠海3例为一家三口</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807577.md#1">2019年 吉林省法轮功学员遭迫害综述</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808161.md#1">武汉肺炎 平安证券高管父亲12小时变危重</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808070.md#1">中共大肆抓维权律师 文东海送妻儿逃亡海外</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807888.md#1">大陆劣质香菇“洗产地”入台湾  扰乱市场</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807986.md#1">中国猪蹦极引爆互联网 国内外网民都吐槽</a><br>
@@ -86,10 +88,8 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805332.md#1">大陆“东阿阿胶”24年首亏 预亏超3亿</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805294.md#1">央视文件曝光 抢占国际舆论阵地 加大洗脑</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805257.md#1">传广州医护人员染肺炎 院方否认后又删帖文</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804931.md#1">港天下制裁集会再遭腰斩 防暴警指骂市民</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804943.md#1">周庭被禁离港 通过skype在日本大学露面</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801551.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15eb6577428085aa_ttl7dayMUw_IMG_0784-600x450-1-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801551.md#1">【直播回放】纽约港人集会游行吁制裁中共</a><br>本周末，全球多个城市的香港人将举行 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804768.md#1">黑龙江法轮功学员孟宪荣含冤离世</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801155.md#1">澳洲参议员：法轮功为中国所有良心犯争人权</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803218.md#1">金玉红遭酷刑 黑龙江610阻律师会见</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802960.md#1">房还在地址被消失 上海一新生儿无法报户口</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802498.md#1">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804804.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/190321090152100311-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804804.md#1">腾讯主席马化腾去职财付通董事长及总经理</a><br>腾讯主席马化腾日前卸任财付通董事长 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804292.md#1">中共允诺购巨额美农产品 巴西库存或暴增四倍</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803887.md#1">大陆车企卖房收1.68亿扭亏 股票涨停</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803423.md#1">A股监狱风云续演 身家40亿实控人被捕</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803234.md#1">【热点互动】美中贸易停火期能维持多久?</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803135.md#1">德国华为分歧持续 默克尔坚持不排除</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803938.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803938.md#1">【翻墙必看】红三代轧故宫 官媒提三大疑问</a><br>大纪元每天为读者梳理翻墙必看的文章 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804541.md#1">有限资源应该更好使用 美国和平队撤出中国</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803788.md#1">中共军委政法委书记换人</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803438.md#1">中共特工美课堂搜集情报 中国留学生担忧</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803420.md#1">分析：佛州成中共间谍活动重点目标</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803287.md#1">川普政府推动下 美国最早孔子学院将关闭</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11768135.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2013/11/1311111329412436-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11768135.md#1">中共采矿背后黑幕：矿区百姓生活在毒源中</a><br>郁郁葱葱的广西大厂丘陵孕育着祖先留 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804078.md#1">官方未公布西宁路面塌陷原因 各方说法不一</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803776.md#1">防武汉肺炎 加拿大三机场将进行筛查</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803796.md#1">武汉肺炎内地扩散  深圳上海传出疑似病例</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803219.md#1">【新闻看点】武汉肺炎扩散 专家：感染1700人</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803305.md#1">武汉新增17例肺炎 2危重 传播途径仍未知</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1">程晓容：红三代车入故宫 大陆社会畸形无底线</a><br>有人认为，“红三代”车入故宫成热门 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806367.md#1">每日三退声明精选（2020/01/19）</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804070.md#1">江西七个月大婴儿灌肠治咳嗽后夭折</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803815.md#1">每日三退声明精选（2020/01/18）</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803564.md#1">红三代轧故宫发酵 后花园开到美国富人区</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803448.md#1">人死7年仍在收钱 中共民政部募捐黑幕遭起底</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/20170825-SULIN-GAOKAO-600x400-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1">高校将推“强基计划” 学者：维持中共统治</a><br>中共教育部日前发文，从今年起取消高 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801398.md#1">美报告曝光：中共企图影响全球媒体新招术</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796950.md#1">深圳一学校强收午托费 家长提诉求被威胁</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br>美国国会参议员提醒消费者，抵制中共 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/07/101126024504731-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1">武汉肺炎 首批武汉直飞乘客在纽约落地受检</a><br>美国疾病预防控制中心（CDC）周五（1 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804931.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/2001190639331501-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804931.md#1">港天下制裁集会再遭腰斩 防暴警指骂市民</a><br>今天（19日）下午，香港民间发起在遮 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804768.md#1">黑龙江法轮功学员孟宪荣含冤离世</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801551.md#1">【直播回放】纽约港人集会游行吁制裁中共</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801155.md#1">澳洲参议员：法轮功为中国所有良心犯争人权</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803218.md#1">金玉红遭酷刑 黑龙江610阻律师会见</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802960.md#1">房还在地址被消失 上海一新生儿无法报户口</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804804.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/190321090152100311-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804804.md#1">腾讯主席马化腾去职财付通董事长及总经理</a><br>腾讯主席马化腾日前卸任财付通董事长 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804292.md#1">中共允诺购巨额美农产品 巴西库存或暴增四倍</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803887.md#1">大陆车企卖房收1.68亿扭亏 股票涨停</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803423.md#1">A股监狱风云续演 身家40亿实控人被捕</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803234.md#1">【热点互动】美中贸易停火期能维持多久?</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803135.md#1">德国华为分歧持续 默克尔坚持不排除</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803938.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803938.md#1">【翻墙必看】红三代轧故宫 官媒提三大疑问</a><br>大纪元每天为读者梳理翻墙必看的文章 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804541.md#1">有限资源应该更好使用 美国和平队撤出中国</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803788.md#1">中共军委政法委书记换人</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803438.md#1">中共特工美课堂搜集情报 中国留学生担忧</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803420.md#1">分析：佛州成中共间谍活动重点目标</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803287.md#1">川普政府推动下 美国最早孔子学院将关闭</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11768135.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2013/11/1311111329412436-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11768135.md#1">中共采矿背后黑幕：矿区百姓生活在毒源中</a><br>郁郁葱葱的广西大厂丘陵孕育着祖先留 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804078.md#1">官方未公布西宁路面塌陷原因 各方说法不一</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803776.md#1">防武汉肺炎 加拿大三机场将进行筛查</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803796.md#1">武汉肺炎内地扩散  深圳上海传出疑似病例</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803219.md#1">【新闻看点】武汉肺炎扩散 专家：感染1700人</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803305.md#1">武汉新增17例肺炎 2危重 传播途径仍未知</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1">程晓容：红三代车入故宫 大陆社会畸形无底线</a><br>有人认为，“红三代”车入故宫成热门 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806367.md#1">每日三退声明精选（2020/01/19）</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804070.md#1">江西七个月大婴儿灌肠治咳嗽后夭折</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803815.md#1">每日三退声明精选（2020/01/18）</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803564.md#1">红三代轧故宫发酵 后花园开到美国富人区</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803448.md#1">人死7年仍在收钱 中共民政部募捐黑幕遭起底</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/20170825-SULIN-GAOKAO-600x400-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1">高校将推“强基计划” 学者：维持中共统治</a><br>中共教育部日前发文，从今年起取消高 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801398.md#1">美报告曝光：中共企图影响全球媒体新招术</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796950.md#1">深圳一学校强收午托费 家长提诉求被威胁</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br>美国国会参议员提醒消费者，抵制中共 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/07/101126024504731-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1">武汉肺炎 首批武汉直飞乘客在纽约落地受检</a><br>美国疾病预防控制中心（CDC）周五（1 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
